Add sharper text in webkit.
Make branding smaller/simpler too.

--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -10,7 +10,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container-fluid">
-                <a class="brand" href="/">XHGui Run Results</a>
+                <a class="brand" href="/">XHG</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li class="active"><a href="#">Home</a></li>
