--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -15,7 +15,6 @@
                     <ul class="nav">
                         <li class="active"><a href="#">Home</a></li>
                         <li><a href="/custom.php">Custom View</a></li>
-                        
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -32,7 +31,7 @@
     </footer>
     </div>
 
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="js/jquery-latest.js"></script>
     <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-tooltip.js"></script>
