Fix jQuery url.

--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -31,7 +31,7 @@
     </footer>
     </div>
 
-    <script src="js/jquery-latest.js"></script>
+    <script src="js/jquery.js"></script>
     <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-tooltip.js"></script>
