Add new nav links.

--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -10,11 +10,14 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container-fluid">
-                <a class="brand" href="/">XHG</a>
+                <a class="brand" href="{{ url('/') }}">XHG</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="/custom.php">Custom View</a></li>
+                        <li><a href="{{ url('/') }}">Recent</a></li>
+                        <li><a href="{{ url('/', {'sort': 'wt'}) }}">Longest wall time</a></li>
+                        <li><a href="{{ url('/', {'sort': 'cpu'}) }}">Most CPU</a></li>
+                        <li><a href="{{ url('/', {'sort': 'mu'}) }}">Most memory</a></li>
+                        <li><a href="{{ url('/custom.php') }}">Custom View</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
