Make the header static at the top.
A fixed navbar doesn't get us much, and just sucks up screen space
all the time.

--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -7,7 +7,7 @@
     <link href="css/xhgui.css" rel="stylesheet" media="screen">
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-static-top">
         <div class="navbar-inner">
             <div class="container-fluid">
                 <a class="brand" href="{{ url('/') }}">XHG</a>
