--- a/web/webroot/css/xhgui.css
+++ b/web/webroot/css/xhgui.css
@@ -9,10 +9,6 @@
     font-style: normal;
 }
 
-body {
-    margin-top: 40px;
-}
-
 /**
  * Typography
  */
@@ -29,6 +25,11 @@ h1, h2, h3, h4, h5, h6,
 .text-wrap {
     word-break: break-all;
 }
+
+/**
+ * Navbar
+ */
+
 
 /**
  * Tables
