Tweak navbar styles.
* Add responsive button.
* Add colors + borders to navbar.

--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -7,9 +7,14 @@
     <link href="css/xhgui.css" rel="stylesheet" media="screen">
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-static-top">
+    <div class="navbar navbar-static-top">
         <div class="navbar-inner">
             <div class="container-fluid">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
                 <a class="brand" href="{{ url('/') }}">XHG</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
@@ -35,7 +40,6 @@
     </div>
 
     <script src="js/jquery.js"></script>
-    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-tooltip.js"></script>
     <script src="js/d3.js"></script>
