--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -44,6 +44,7 @@
     <script src="js/bootstrap-tooltip.js"></script>
     <script src="js/d3.js"></script>
     <script src="js/jquery.tablesorter.js"></script>
+    <script src="js/jquery.stickytableheaders.js"></script>
     <script src="js/xhgui.js"></script>
     {% block jsfoot '' %}
 </body>
