Make pagination display simpler.

--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -31,12 +31,14 @@
 
     <div class="container-fluid">
         {% block content '' %}
-    <hr>
-    <footer>
-    <span class="footersplit">© Paul Reinheimer &amp; Mark Story 2012</span>
-    <span class="footersplit">1,000,000 µs = 1 second</span>
-    <span class="footersplit">1,048,576 bytes = 1 MB</span>
-    </footer>
+
+        <hr>
+
+        <footer class="row-fluid footer-text">
+            <span class="span4">© Paul Reinheimer &amp; Mark Story 2012</span>
+            <span class="span4">1,000,000 µs = 1 second</span>
+            <span class="span4">1,048,576 bytes = 1 MB</span>
+        </footer>
     </div>
 
     <script src="js/jquery.js"></script>
