--- a/web/templates/runs/list.twig
+++ b/web/templates/runs/list.twig
@@ -7,8 +7,8 @@
     <div class="control-group span4">
         <label class="control-label" for="start_date">Date range</label>
         <div class="controls">
-            <input type="text" id="start_date" name="start_date" class="span2" value="{{ search.start_date }}">
-            <input type="text" name="end_date" class="span2" value="{{ search.end_date }}">
+            <input type="text" id="date_start" name="date_start" class="span2" value="{{ search.date_start }}">
+            <input type="text" id="date_end" name="date_end" class="span2" value="{{ search.date_end }}">
         </div>
     </div>
     <div class="control-group span4">
