Wire in a datepicker.
They are generally easier to use than typing.

--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Xhgui</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="css/datepicker.css" rel="stylesheet" media="screen">
     <link href="css/xhgui.css" rel="stylesheet" media="screen">
 </head>
 <body>
@@ -44,6 +45,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/bootstrap-datepicker.js"></script>
     <script src="js/d3.js"></script>
     <script src="js/jquery.tablesorter.js"></script>
     <script src="js/jquery.stickytableheaders.js"></script>
