--- a/web/templates/runs/list.twig
+++ b/web/templates/runs/list.twig
@@ -47,6 +47,6 @@
     {% endfor %}
     </tbody>
 </table>
-{{ helpers.pagination('/index.php', page, total_pages) }}
+{{ helpers.pagination('/index.php', page, total_pages, search) }}
 {% endblock %}
 
