Add nicer titles to the list page.

--- a/web/templates/runs/list.twig
+++ b/web/templates/runs/list.twig
@@ -2,6 +2,8 @@
 {% import 'macros/helpers.twig' as helpers %}
 
 {% block content %}
+<h1>{{ title }}</h1>
+
 <div class="searchbar clearfix">
 <form action="{{ url('/index.php') }}" method="get" class="form-inline">
     <div class="control-group span4">
