Split chart js into a separate file.
This separates dom behavior and re-usable library methods.

--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -49,6 +49,7 @@
     <script src="js/d3.js"></script>
     <script src="js/jquery.tablesorter.js"></script>
     <script src="js/jquery.stickytableheaders.js"></script>
+    <script src="js/xhgui-charts.js"></script>
     <script src="js/xhgui.js"></script>
     {% block jsfoot '' %}
 </body>
