--- a/web/templates/runs/view.twig
+++ b/web/templates/runs/view.twig
@@ -10,9 +10,9 @@
     <div class="sidebar-nav">
         <ul class="nav nav-list">
             <li class="nav-header">This Run</li>
-            <li><strong>URL</strong> <a href="{{ url('/url.php', {'url': result.meta.url|simple_url }) }}" style="font-size: small; display: inline;">{{ result.meta.url }}</a></li>
+            <li><strong>URL</strong> <a href="{{ url('/url.php', {'url': result.meta.url|simple_url }) }}">{{ result.meta.url }}</a></li>
             <li><strong>Time</strong> {{ result.meta.request_time.sec|date('r') }}</li>
-            <li><strong>ID</strong> <a href="/custom_help.php?id={{ result._id }}" style="font-size: small; display: inline;">{{ result._id }}</a></li>
+            <li><strong>ID</strong> <a href="/custom_help.php?id={{ result._id }}">{{ result._id }}</a></li>
             <li><strong>Wall Time</strong> {{ result.profile['main()'].wt|as_time }}</li>
             <li><strong>CPU Time</strong> {{ result.profile['main()'].cpu|as_time }}</li>
             <li><strong>Memory Usage</strong> {{ result.profile['main()'].mu|as_bytes }}</li>
