--- a/web/webroot/css/xhgui.css
+++ b/web/webroot/css/xhgui.css
@@ -75,6 +75,11 @@ h1, h2, h3, h4, h5, h6,
 .nav-list dl {
     margin: 0;
 }
+.sidebar-nav li a {
+    display: inline;
+    padding: 0;
+    margin: 0;
+}
 .sidebar-nav li a:hover {
     background: transparent;
 }
