Fix tooltip widths.

--- a/web/webroot/css/xhgui.css
+++ b/web/webroot/css/xhgui.css
@@ -172,7 +172,8 @@ th.headerSortUp {
     position: relative;
 }
 .chart-container .popover {
-    width: auto;
+	min-width: 125px;
+	width: auto;
 }
 
 .chart-axis path,
