--- a/web/templates/runs/list.twig
+++ b/web/templates/runs/list.twig
@@ -26,28 +26,36 @@
 </div>
 
 <table class="table table-hover table-sort">
-    <thead>
+    {% if runs|length or has_search %}
+        <thead>
+            <tr>
+                <th>URL</th>
+                <th>Time</th>
+                <th class="right"><span class="tip" title="Wall time">wt</span></th>
+                <th class="right"><span class="tip" title="CPU time">cpu</span></th>
+                <th class="right"><span class="tip" title="Memory Usage">mu</span></th>
+                <th class="right"><span class="tip" title="Peak Memory Usage">pmu</span></th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for result in runs %}
         <tr>
-            <th>URL</th>
-            <th>Time</th>
-            <th class="right"><span class="tip" title="Wall time">wt</span></th>
-            <th class="right"><span class="tip" title="CPU time">cpu</span></th>
-            <th class="right"><span class="tip" title="Memory Usage">mu</span></th>
-            <th class="right"><span class="tip" title="Peak Memory Usage">pmu</span></th>
+            <td><a href="{{ url('/url.php', {'url': result.meta.url|simple_url }) }}">{{ result.meta.url }}</a></td>
+            <td><a href="{{ url('/run.php', {'id': result._id|trim }) }}">{{ result['meta']['SERVER']['REQUEST_TIME']|date(date_format) }}</a></td>
+            <td class="right">{{ result.profile['main()']['wt'] |as_time }}</td>
+            <td class="right">{{ result.profile['main()']['cpu'] |as_bytes }}</td>
+            <td class="right">{{ result.profile['main()']['mu'] |as_bytes }}</td>
+            <td class="right">{{ result.profile['main()']['pmu'] |as_bytes }}</td>
         </tr>
-    </thead>
-    <tbody>
-    {% for result in runs %}
-    <tr>
-        <td><a href="{{ url('/url.php', {'url': result.meta.url|simple_url }) }}">{{ result.meta.url }}</a></td>
-        <td><a href="{{ url('/run.php', {'id': result._id|trim }) }}">{{ result['meta']['SERVER']['REQUEST_TIME']|date(date_format) }}</a></td>
-        <td class="right">{{ result.profile['main()']['wt'] |as_time }}</td>
-        <td class="right">{{ result.profile['main()']['cpu'] |as_bytes }}</td>
-        <td class="right">{{ result.profile['main()']['mu'] |as_bytes }}</td>
-        <td class="right">{{ result.profile['main()']['pmu'] |as_bytes }}</td>
-    </tr>
-    {% endfor %}
-    </tbody>
+        {% else %}
+        <tr>
+            <td colspan="6" class="no-results">
+                Your search conditions matched no runs. Try changing you search criteria.
+            </td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    {% endif %}
 </table>
 {{ helpers.pagination('/index.php', page, total_pages, search) }}
 {% endblock %}
