--- a/web/templates/runs/list.twig
+++ b/web/templates/runs/list.twig
@@ -27,6 +27,20 @@
 </div>
 {% endif %}
 
+{# No run data, and no search, must be just getting started #}
+{% if not runs.count and not has_search %}
+<div class="hero-unit">
+    <h3>Looks like you haven't done any profiling</h3>
+    <p>To get started with XHGUI you'll need to collect some profiling data.</p>
+    <p>The simplest way to get an application profiled, is to use <code>external/header.php</code>.
+        This file is designed to be combined with PHP's
+        <a href="http://www.php.net/manual/en/ini.core.php#ini.auto-prepend-file">auto_prepend_file</a>
+        directive. This can be enabled system-wide through `php.ini`. Alternatively, you can enable
+        <code>auto_prepend_file</code> per virtual host. See the README.md file for more details.
+    </p>
+</div>
+{% endif %}
+
 {% if runs.count or has_search %}
 <table class="table table-hover table-sort">
     <thead>
