--- a/web/templates/runs/symbol-view.twig
+++ b/web/templates/runs/symbol-view.twig
@@ -33,7 +33,7 @@
     </table>
 
     <h3>Parent functions</h3>
-    <table class="table">
+    <table class="table table-hover table-sort">
         <thead>
             <tr>
                 <th>Function</th>
@@ -61,7 +61,7 @@
     </table>
 
     <h3>Child functions</h3>
-    <table class="table">
+    <table class="table table-hover table-sort">
         <thead>
             <tr>
                 <th>Function</th>
