--- a/web/templates/runs/symbol-view.twig
+++ b/web/templates/runs/symbol-view.twig
@@ -3,6 +3,7 @@
 
 {% block content %}
 <div class="row-fluid">
+    <a class="back-link" href="{{ url('/run.php', {'id': id}) }}">&laquo; Back to run</a>
     <h1>Parent/child calls for {{ symbol }}</h1>
 </div>
 <div class="row-fluid">
