Make dots & lines a bit thicker/more visible.

--- a/web/webroot/css/xhgui.css
+++ b/web/webroot/css/xhgui.css
@@ -189,6 +189,10 @@ tr .no-results {
 .chart-line {
     fill: none;
     stroke: steelblue;
+    stroke-width: 2px;
+}
+.chart-dots circle {
+    stroke: white;
     stroke-width: 1.5px;
 }
 
