Start skeleton of watch function UI.
Still lots to do, as nothing works right now.

--- a/web/templates/layout/base.twig
+++ b/web/templates/layout/base.twig
@@ -24,6 +24,7 @@
                         <li><a href="{{ url('/', {'sort': 'cpu'}) }}">Most CPU</a></li>
                         <li><a href="{{ url('/', {'sort': 'mu'}) }}">Most memory</a></li>
                         <li><a href="{{ url('/custom.php') }}">Custom View</a></li>
+                        <li><a href="{{ url('/watch.php') }}">Watch Functions</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
