Add some styling and behavior to the watch list.
You can only add one row at a time, but the page is fast, so I can live
with it for now.

--- a/web/templates/watch/list.twig
+++ b/web/templates/watch/list.twig
@@ -6,53 +6,51 @@
 
 {% if saved %}
 <div class="alert alert-success">
-	Watch functions updated.
+    Watch functions updated.
 </div>
 {% endif %}
 
 <form action="{{ url('/watch.php') }}" method="post">
 
 {% if watched|length %}
-	<table class="table table-hover">
-		<thead>
-			<tr>
-				<th>Function</th>
-				<th>&nbsp;</th>
-			</tr>
-		</thead>
-		<tbody>
-		{% for i, watch in watched %}
-		<tr>
-			<td>
-				<input name="watch[{{ i }}][_id]" type="hidden" value="{{ watch.id }}" />
-				<input name="watch[{{ i }}][name]" type="text" value="{{ watch.name }}" />
-			</td>
-			<td>
-				<a href="#" class="watch-delete">Delete</a>
-			</td>
-		</tr>
-		{% endfor %}
-		<tr>
-			<td>
-				<input name="watch[{{ watched|length }}][name]" type="text" />
-			</td>
-			<td>&nbsp;</td>
-		</tr>
-		</tbody>
-	</table>
+    <ul class="unstyled watch-list">
+        {% for i, watch in watched %}
+        <li>
+            <input name="watch[{{ i }}][_id]" type="hidden" value="{{ watch.id }}" />
+            <input name="watch[{{ i }}][name]" type="text" value="{{ watch.name }}" />
+            <a href="#" class="btn btn-small btn-warning watch-delete">Delete</a>
+        </li>
+        {% endfor %}
+        <li>
+            <input name="watch[{{ watched|length }}][name]" type="text" />
+        </li>
+    </ul>
 
-	<input class="btn btn-primary" type="submit" value="Save" />
+    <input class="btn btn-large btn-primary" type="submit" value="Save" />
 {% else %}
-	<div class="hero-unit">
-		<h3>You have no watch functions</h3>
-		<p>Watch functions let you pluck function names
-		you're interested in to the top of run reports.</p>
-		<p>Add one to get started</p>
-		<input name="watch[0][name]" type="text" />
-		<input class="btn btn-primary" type="submit" value="Save" />
-	</div>
+    <div class="hero-unit">
+        <h3>You have no watch functions</h3>
+        <p>Watch functions let you pluck function names
+        you're interested in to the top of run reports.</p>
+        <p>Add one to get started</p>
+        <input name="watch[0][name]" type="text" />
+        <input class="btn btn-primary" type="submit" value="Save" />
+    </div>
 {% endif %}
 
 </form>
 
 {% endblock %}
+
+{% block jsfoot %}
+<script>
+$(document).ready(function () {
+    $('.watch-delete').on('click', function () {
+        $(this).parent().fadeOut('fast', function () {
+            $(this).remove();
+        });
+        return false;
+    });
+});
+</script>
+{% endblock %} 
